--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -2,7 +2,7 @@
   <div class="notice"><%= flash[:notice] %></div>
 <% end %>
 
-<h1>Sign Up</h1>
+<h1>Hi! Sign Up</h1>
 
 <%= form_for(@parent) do |f| %>
   <%= f.label :name %>
