fixed some login issues, created new routes for that

--- a/app/views/parents/welcome.html.erb
+++ b/app/views/parents/welcome.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome, parents!</h1>
 
-<%= link_to 'Sign Up', new_parent_path(@parent)%>
-<%= link_to 'Log In', new_session_path(@session)%>
+<%= link_to 'Sign Up', signup_path%>
+<%= link_to 'Log In', login_path%>
