--- a/app/views/kids/new.html.erb
+++ b/app/views/kids/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Kid#new</h1>
-<p>Find me in app/views/kid/new.html.erb</p>
+<h1>Add Your Kid!</h1>
+
+<%= form_for @kid do |f| %>
+  <h3>Your kid's name</h3>
+  <%= f.text_field :name %>
+  <br>
+  <h3>Your kid's age</h3>
+  <%= f.text_field %>
+
+  <% f.submit 'Submit'%>
+
+<%end%>
