--- a/app/views/parents/welcome.html.erb
+++ b/app/views/parents/welcome.html.erb
@@ -1,4 +1,5 @@
-<h1>Welcome, parents!</h1>
+<h1>Welcome, Parent!</h1>
 
 <%= link_to 'Sign Up', signup_path%>
 <%= link_to 'Log In', login_path%>
+<% if logged_in?%>Welcome, <%= current_user.capitalize %><% end %>
