--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Course#index</h1>
-<p>Find me in app/views/course/index.html.erb</p>
+<h1>Courses</h1>
+<% Course.all.each do |c|%>
+  <h2><%=c.title%></h2>
+  <h4><%=c.start_time%></h4>
+  <h4>Age Group: <%=c.age_group%></h4>
+  <p><%=c.description%></p>
+<%end%>
