welcome page is broken, things aren't working but I feel i'm getting somewhere with login and persisting

--- a/app/views/parents/welcome.html.erb
+++ b/app/views/parents/welcome.html.erb
@@ -12,4 +12,4 @@
 
 <%= link_to "Log out", logout_path, method: :delete %>
 
-<%= link_to "Profile", current_user %>
+<%= link_to "Profile", parent_path %>
