login seems to be completely working

--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Parent List</h1>
-<h2>Hi, <%=@parent%>!</h2>
+
+<h2>Hi, <%=current_user.name.capitalize%>!</h2>
 <%@parents.each do |p|%>
   <p><%=p.name%></p>
 <%end%>
+
+<%= link_to "Log out", logout_path, method: :delete %>
