--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
   <br>
-  <%= f.label :password_digest %>
+  <%= f.label :password %>
   <%= f.password_field :password_digest %>
 
   <%=f.submit 'Submit' %>
