trying to get the list of created kids to show on profile page for parent

--- a/app/views/kids/new.html.erb
+++ b/app/views/kids/new.html.erb
@@ -5,8 +5,8 @@
   <%= f.text_field :name %>
   <br>
   <h3>Your kid's age</h3>
-  <%= f.text_field %>
+  <%= f.text_field :age %>
 
-  <% f.submit 'Submit'%>
+  <%= f.submit 'Submit'%>
 
 <%end%>
