--- a/app/views/parents/welcome.html.erb
+++ b/app/views/parents/welcome.html.erb
@@ -1,5 +1,6 @@
 <%if logged_in?%>
   <h1>Welcome, <%=current_user.name%>!</h1>
+  <%= link_to "Profile", parent_path(session[:id]) %>
 <%else%>
   <h1>Hi! Go ahead and log in.</h1>
 <%end%>
