got nested forms for kids to work

--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -10,6 +10,21 @@
   <br>
   <%= f.label :password %>
   <%= f.password_field :password_digest %>
+  <br>
+
+  <h3>Your kids:</h3>
+  <%= f.fields_for :kids do |k| %>
+    <%= k.label :name %>
+    <%= k.text_field :name %>
+    <br>
+    <%= k.label :age %>
+    <%= k.text_field :age %>
+    <br>
+    <%= k.label :kid_number %>
+    <%= k.text_field :kid_number %>
+
+  <%end%>
+
 
   <%=f.submit 'Submit' %>
 <%end%>
