--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Teacher#index</h1>
-<p>Find me in app/views/teacher/index.html.erb</p>
+<h1>Teacher List</h1>
+<%@teachers.each do |t|%>
+  <%=link_to <%t.name%>, teacher_path(t)%>
+  <%=t.bio%>
+<%end%>
