I gerryrigged it so that the courses all start with a parent with id of zero, not sure if that was a great way to do it but it's working smoothly

--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -10,3 +10,8 @@
       <p><%=k.name.capitalize%>, age: <%=k.age%></p>
     <%end%>
   <%end%>
+
+  <h3>Your courses:</h3>
+    <%@courses.each do |c|%>
+      <p><%=c.title%>, <%=c.start_time%></p>
+    <%end%>
