--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -1,13 +1,14 @@
 <h1>Welcome, <%=@parent.name.capitalize%>!</h1>
-<%= link_to "Browse courses", parent_courses_path(@parent) %>
-<%= link_to "Log out", logout_path, method: :delete %>
-<%= link_to "All kids in the school", parent_kids_path(@parent) %>
+<p><%= link_to "Browse courses and sign up", parent_courses_path(@parent) %></p>
+<p><%= link_to "Log out", logout_path, method: :delete %></p>
+<p><%= link_to "All kids in the school", parent_kids_path(@parent) %></p>
 
 
   <h3>Your kids:</h3>
   <%@kids.each do |k|%>
     <% if k.name.present? %>
       <p><%=k.name.capitalize%>, age: <%=k.age%></p>
+      <p><%= link_to "Sign this kid up for some classes", edit_parent_kid_path(k) %></p>
     <%end%>
   <%end%>
 
