--- a/app/views/kids/edit.html.erb
+++ b/app/views/kids/edit.html.erb
@@ -1,6 +1,6 @@
 <h3>Sign up <%=@kid.name%> for a course:</h3>
 
-<%=form_for @kid do |parent_kid|%>
+<%=form_for @kid do |f|%>
   <%= f.collection_select :course, Course.all, :id, :title%>
 
   <%= f.submit %>
