--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -8,11 +8,12 @@
   <%@kids.each do |k|%>
     <% if k.name.present? %>
       <p><%=k.name.capitalize%>, age: <%=k.age%></p>
+    <%end%>
+    <% if k.course_id.present?%>
+      <p>Course: <%=Course.find_by(id: k.course_id).title%>, <%=Course.find_by(id: k.course_id).start_time%></p>
+    <%end%>
+    <% if k.name.present? %>
       <p><%= link_to "Sign this kid up for some classes", edit_parent_kid_path(k) %></p>
     <%end%>
-  <%end%>
 
-  <h3>Your courses:</h3>
-  <%@courses.each do |c|%>
-    <p><%=c.title%>, <%=c.start_time%></p>
   <%end%>
