--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -10,6 +10,7 @@
       <p><%=k.name.capitalize%>, age: <%=k.age%></p>
     <%end%>
     <% if k.course_id.present?%>
+      <%binding.pry%>
       <p>Course: <%=Course.find(k.course_id).title%>, <%=Course.find(k.course_id).start_time%></p>
     <%end%>
     <% if k.name.present? %>
