--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -2,12 +2,14 @@
 <p><%= link_to "Browse courses and sign up", parent_courses_path(@parent) %></p>
 <p><%= link_to "Log out", logout_path, method: :delete %></p>
 <p><%= link_to "All kids in the school", parent_kids_path(@parent) %></p>
+<p><%= link_to "Edit Kid", edit_parent_kid_path(@parent, ) %></p>
 
 
   <h3>Your kids:</h3>
   <%@kids.each do |k|%>
     <% if k.name.present? %>
       <p><%=k.name.capitalize%>, age: <%=k.age%></p>
+      <p><%= link_to "Edit Kid", edit_parent_kid_path(@parent, k) %></p>
       <h3>Sign up <%=k.name%> for a course:</h3>
       <%=form_for k, url: '/parents/:parent_id/kids/:id', method: :patch do |f|%>
         <%= f.collection_select :course_id, Course.all, :id, :title%>
@@ -16,7 +18,6 @@
       <%end%>
     <%end%>
     <% if k.course_id.present?%>
-      <%binding.pry%>
       <p>Course: <%=Course.find(k.course_id).title%>, <%=Course.find(k.course_id).start_time%></p>
     <%end%>
 
