--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -1,24 +1,27 @@
 <h1>Welcome, <%=@parent.name.capitalize%>!</h1>
-<p><%= link_to "Browse courses and sign up", parent_courses_path(@parent) %></p>
-<p><%= link_to "Log out", logout_path, method: :delete %></p>
-<p><%= link_to "All kids in the school", parent_kids_path(@parent) %></p>
-<p><%= link_to "Edit Kid", edit_parent_kid_path(@parent, ) %></p>
+<p><%= link_to "List of all courses", parent_courses_path(@parent) %></p>
 
 
-  <h3>Your kids:</h3>
+  <h2>Your kids:</h2>
   <%@kids.each do |k|%>
     <% if k.name.present? %>
       <p><%=k.name.capitalize%>, age: <%=k.age%></p>
-      <p><%= link_to "Edit Kid", edit_parent_kid_path(@parent, k) %></p>
-      <h3>Sign up <%=k.name%> for a course:</h3>
+      <p><%= link_to "#{k.name.capitalize}'s' Profile", parent_kid_path(@parent, k) %></p>
+      <h3>Sign <%=k.name.capitalize%> up for a course:</h3>
       <%=form_for k, url: parent_kid_path(@parent, k), method: :patch do |f|%>
         <%= f.collection_select :course_id, Course.all, :id, :title%>
 
-        <%= f.submit %>
+        <%= f.submit "Submit" %>
       <%end%>
     <%end%>
     <% if k.course_id.present?%>
-      <p>Course: <%=Course.find(k.course_id).title%>, <%=Course.find(k.course_id).start_time%></p>
+      <p><%=k.name.capitalize%>'s Course: <%=Course.find(k.course_id).title%>, <%=Course.find(k.course_id).start_time%></p>
     <%end%>
+    --------------------------------
 
   <%end%>
+
+  <p><%= link_to "View All Kids", parent_kids_path(@parent) %></p>
+  <p><%= link_to "View All Parents", parents_path %></p>
+  <p><%= link_to "View All Teachers", teachers_path %></p>
+  <p><%= link_to "Log Out", logout_path, method: :delete %></p>
