--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -4,8 +4,8 @@
 
   <h2>Your kids:</h2>
   <%@kids.each do |k|%>
-    <% if k.name.present? %>
-      <p><%=k.name.capitalize%>, age: <%=k.age%></p>
+    <% if exists?(k) %>
+      <p><%=capitalize(k)%>, age: <%=k.age%></p>
       <p><%= link_to "#{k.name.capitalize}'s' Profile", parent_kid_path(@parent, k) %></p>
       <h3>Sign <%=k.name.capitalize%> up for a course:</h3>
       <%=form_for k, url: parent_kid_path(@parent, k), method: :patch do |f|%>
@@ -13,7 +13,7 @@
         <%= f.submit "Submit" %>
       <%end%>
     <%end%>
-    <% if k.course_id.present?%>
+    <% if registered?(k)%>
       <p><%=k.name.capitalize%>'s Course: <%=Course.find(k.course_id).title%>, <%=Course.find(k.course_id).start_time%></p>
     <%end%>
     -------------------------
