almost got omniauth working

--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -5,10 +5,12 @@
 <% end %>
 
 <h1>Hi! Sign Up</h1>
+<p>You can just eneter your name or use your email address.</p>
 
 <%= form_for(@parent) do |f| %>
   <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name%>
+
   <br>
   <%= f.label :password %>
   <%= f.password_field :password_digest %>
