--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -1,11 +1,10 @@
 <%= render 'style' %>
 
 <% if flash[:notice] %>
-  <div class="notice"><%= flash[:notice] %></div>
+  <h2><div class="notice"><%= flash[:notice] %></div></h2>
 <% end %>
 
 <h1>Hi! Sign Up</h1>
-<p>You can just eneter your name or use your email address.</p>
 
 <%= form_for(@parent) do |f| %>
   <%= f.label :name %>
