--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -12,7 +12,7 @@
 
   <br>
   <%= f.label :password %>
-  <%= f.password_field :password_digest %>
+  <%= f.password_field :password %>
   <br>
 
   <h3>Your kids:</h3>
