changing kids show page for parents to see index

--- a/app/views/kids/index.html.erb
+++ b/app/views/kids/index.html.erb
@@ -1,14 +1,25 @@
-<h1>Kids in the School:</h1>
+<h1>Your Kids:</h1>
 
-<%if logged_in?%>
-  <% @kids.each do |k|%>
-    <% if exists?(k) && k.age != 0 %>
-      <p><%=capitalize(k)%>, age: <%=k.age%>, parent: <%=capitalize(k.parent)%></p>
-    <% elsif k.age == 0 %>
-      <p><%=capitalize(k)%>, infant, parent: <%=capitalize(k.parent)%></p>
+<h2>You can sign each kid up for one course only.</h2>
+
+<%@kids.each do |k|%>
+
+  <% if exists?(k) %>
+    <p><%=capitalize(k)%></p>
+    <%if k.age != 0%>
+        <h3>Age: <%=k.age%></h3>
+    <%else%>
+        <h3>Age: <%="#{k.name} is an infant" if Kid.infant%></h3>
     <%end%>
+    <p><%= link_to "#{k.name.capitalize}'s' Profile", parent_kid_path(@parent, k) %></p>
+
   <%end%>
-  <%=render partial: 'parents/goback'%>
-<%else%>
-  <p>You need to be logged in to see this.</p>
+  <% if registered?(k)%>
+    <p><%=k.name.capitalize%>'s Course: <%=k.course.title%>, <%=k.course.start_time%></p>
+  <%end%>
+  -------------------------
+
 <%end%>
+
+<%=render partial: 'sessions/logout'%>
+<%=render partial: 'parents/goback'%>
