Not getting the nested routes to quite work for the parents, need to fiddle with the ids and who the parents really are

--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -15,7 +15,7 @@
 <%end%>
 
 <p><%= link_to "Browse courses", parent_courses_path(@parent) %></p>
-<p><%= link_to "View Your Kids", parent_kids_path(@parent, @parent.kids) %></p>
+<p><%= link_to "View Your Kids", parent_kids_path(@parent.id) %></p>
 <p><%= link_to "View All Parents", parents_path %></p>
 <p><%= link_to "View All Teachers", teachers_path %></p>
 <%=render partial: 'sessions/logout'%>
