fixed parent landing wlecome page styling and views

--- a/app/views/parents/_goback.html.erb
+++ b/app/views/parents/_goback.html.erb
@@ -1,1 +1,2 @@
-<p><%= link_to "Go Back", parent_path(current_user)%></p>
+<p><%= link_to "Go to Your Schedule", parent_path(current_user)%></p>
+<p><%= link_to "Browse and Sign Up For Courses", courses_path%></p>
