--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -27,3 +27,9 @@ a:hover {
   border-radius: 10px;
   background-color: #f9d6eb;
 }
+
+.border {
+  margin: 20px;
+  border-radius: 10px;
+  background-color: #f9d6eb;
+}
