--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,10 +1,11 @@
 <h1>Courses</h1>
 <% Course.all.each do |c|%>
-
-  <h2><%=link_to c.title, course_path(c)%></h2>
-  <h4><%=c.start_time%></h4>
-  <h4>Age Group: <%=c.age_group%></h4>
-  <p><%=c.description%></p>
+  <div class="courseborder">
+    <h2><%=link_to c.title, course_path(c)%></h2>
+    <h4><%=c.start_time%></h4>
+    <h4>Age Group: <%=c.age_group%></h4>
+    <p><%=c.description%></p>
+  </div>
 <%end%>
 
 <%if logged_in?%>
