before taking away kid_number in forms, ability to add new kids

--- a/app/views/kids/index.html.erb
+++ b/app/views/kids/index.html.erb
@@ -21,5 +21,6 @@
 
 <%end%>
 
+<p><%=link_to "Add more kids", new_parent_kid_path(@parent)%></p>
 <%=render partial: 'sessions/logout'%>
 <%=render partial: 'parents/goback'%>
