--- a/app/views/kids/new.html.erb
+++ b/app/views/kids/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for @kid, url: "/parents/#{@parent.id}/kids" do |f| %>
 
 
-  <h3>Your kids:</h3>
+  <h3>Your kid:</h3>
     <%= f.label :kid_number %><br>
     <%= f.text_field :kid_number %>
     <br>
