--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -15,7 +15,7 @@
   <%= f.password_field :password %>
   <br>
 
-  <h3>Your kids:</h3>
+  <h3>Your kids (add up to three here, you can add more later):</h3>
   <%= f.fields_for :kids do |k| %>
     <%= k.label :kid_number %><br>
     <%= k.text_field :kid_number %>
