changed some styling and added seeds

--- a/app/views/kids/index.html.erb
+++ b/app/views/kids/index.html.erb
@@ -21,6 +21,6 @@
 
 <%end%>
 
-<p><%=link_to "Add more kids", new_parent_kid_path(@parent)%></p>
+<h2><%=link_to "Add more kids", new_parent_kid_path(@parent)%></h2>
 <%=render partial: 'sessions/logout'%>
 <%=render partial: 'parents/goback'%>
